Fix calendar alignment

--- a/www/styles/styles.scss
+++ b/www/styles/styles.scss
@@ -1076,26 +1076,24 @@ input[type=submit]:hover {
 #calendar {
   display: flex;
   flex-wrap: wrap;
-  padding: 10px;
-
+  padding: 10px 0;
+  justify-content: space-between;
 }
 
 .month-box {
   background-color: #F9F8F8;
-  ;
   max-height: 12rem;
   width: 24rem;
   border-radius: 0.8rem;
-  margin: 0.5rem;
   box-shadow: 0 0.4rem 0.8rem 0 rgba(168, 106, 106, 0.2);
   padding: 0rem 0rem 0.2rem 0rem;
   border: 1rem #F9F8F8;
+  margin-bottom: 1rem;
 }
 
 .month-name {
   background-color: #425768;
   color: #F9F8F8;
-  ;
   max-height: 3rem;
   font-size: 2rem;
   margin: 0rem;
@@ -1129,6 +1127,12 @@ input[type=submit]:hover {
   width: 4rem;
   margin: 0.2rem 0rem 0rem 0.5rem;
   padding: 0rem;
+}
+
+@media screen and (max-width: 816px) {
+  .month-box {
+    margin: 1rem auto;
+  }
 }
 
 /*** Calendar End ***/
